Cập nhật giao diện SellPanel và các file liên quan