@@ -10,13 +10,19 @@ import common.events.AppEventType;
 import common.events.EventBus;
 import common.realtime.RealtimeClient;
 import common.sync.SyncVersionDao;
+
 import model.order.Customer;
 import model.order.Order;
 import model.order.OrderDetail;
 import model.payment.PaymentMethod;
 import model.product.Product;
 
+// 🌟 Import 2 class KPI của bạn
+import model.account.kpi.KpiCriteria;
+import model.account.kpi.KpiEvaluation;
+
 import javax.swing.*;
+import javax.swing.border.EmptyBorder;
 import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.DefaultTableModel;
 import java.awt.*;
@@ -29,38 +35,48 @@ import java.util.List;
 public class SellPanel extends JPanel {
 
     // =========================================================
-    // CONFIG
+    // COLOR PALETTE & CONSTANTS
     // =========================================================
-    private static final String SEARCH_HINT = "Nhập mã SP, tên SP...";
+    private final Color BG_LIGHT = new Color(245, 246, 250);
+    private final Color CARD_WHITE = Color.WHITE;
+    private final Color PRIMARY_BLUE = new Color(41, 128, 185);
+    private final Color SUCCESS_GREEN = new Color(39, 174, 96);
+    private final Color DANGER_RED = new Color(231, 76, 60);
+    private final Color WARNING_YELLOW = new Color(241, 196, 15);
+    private final Color TEXT_DARK = new Color(44, 62, 80);
+    private final Color TEXT_GRAY = new Color(127, 140, 141);
+    private final Color BORDER_GRAY = new Color(223, 228, 234);
+
     private final DecimalFormat moneyFormat = new DecimalFormat("#,##0 đ");
+    private static final String SEARCH_HINT = "Nhập mã, tên SP hoặc scan mã vạch...";
 
     // =========================================================
     // UI COMPONENTS
     // =========================================================
     private JComboBox<String> cboSearch;
-    private JSpinner spnQty;
-    private JButton btnAdd;
+    private JSpinner spnQtyAdd;
+    private ModernButton btnAdd;
 
     private JTable tblProducts;
     private DefaultTableModel modProducts;
 
     private JTable tblCart;
     private DefaultTableModel modCart;
-
-    private JLabel lblTotal;
-    private JComboBox<String> cboPaymentMethod;
-    private JButton btnPay;
-    private JButton btnCancel;
-    private JButton btnRemove;
-
-    // Customer
-    private JTextField txtCustomerPhone;
-    private JButton btnFindCustomer;
-    private JLabel lblCustomerInfo;
-
-    // 🌟 UI MỚI: Cảnh báo Realtime
     private JPanel pnlWarning;
     private JLabel lblWarningMsg;
+
+    private JTextField txtCustomerPhone;
+    private ModernButton btnFindCustomer;
+    private JLabel lblCusName, lblCusRank, lblCusTotalSpend;
+    private JPanel pnlRankBadge;
+
+    private JComboBox<String> cboPaymentMethod;
+    private JLabel lblSubTotal, lblDiscount, lblTotalPay;
+    private ModernButton btnPay, btnCancel, btnRemove;
+
+    private ToggleButton chkAutoDiscount, chkRealtimeSync, chkPrintBill;
+
+    private JLabel lblKpiItems, lblKpiTotal, lblKpiStatus;
 
     // =========================================================
     // DATA
@@ -69,25 +85,37 @@ public class SellPanel extends JPanel {
     private Customer selectedCustomer;
     private double currentTotal = 0;
     private double finalAmountToPay = 0;
+    private int totalItems = 0;
+
+    // Đối tượng đánh giá KPI
+    private KpiEvaluation currentKpiEval = new KpiEvaluation();
+
+    // Flag chống lỗi vòng lặp (StackOverflow) khi cập nhật JTable
+    private boolean isUpdatingCart = false;
 
     // =========================================================
     // INIT
     // =========================================================
     public SellPanel() {
+        setLayout(new BorderLayout(15, 15));
+        setBackground(BG_LIGHT);
+        setBorder(new EmptyBorder(15, 15, 15, 15));
+
         buildUI();
         initEvents();
-
         loadProducts();
         loadPaymentMethods();
 
-        // LẮNG NGHE REALTIME
+        // REALTIME SUBSCRIPTION
         EventBus.subscribe(AppDataChangedEvent.class, e -> {
             if (e.getType() == AppEventType.PRODUCTS
                     || e.getType() == AppEventType.INVENTORY
                     || e.getType() == AppEventType.ORDERS) {
                 SwingUtilities.invokeLater(() -> {
-                    loadProducts();
-                    refreshCartRealtime();
+                    if (chkRealtimeSync.isSelected()) {
+                        loadProducts();
+                        refreshCartRealtime();
+                    }
                 });
             }
         });
@@ -97,145 +125,299 @@ public class SellPanel extends JPanel {
     // BUILD UI
     // =========================================================
     private void buildUI() {
-        setLayout(new BorderLayout(10, 10));
-        setBackground(new Color(245, 247, 250));
-        setBorder(BorderFactory.createEmptyBorder(15, 15, 15, 15));
+        add(buildTopBar(), BorderLayout.NORTH);
 
-        // ---------------- TOP ----------------
-        JPanel pnlTop = new JPanel(new FlowLayout(FlowLayout.LEFT, 15, 10));
-        pnlTop.setOpaque(false);
-
-        JLabel lblSearch = new JLabel("🔍 Tìm SP:");
-        lblSearch.setFont(new Font("Segoe UI", Font.BOLD, 14));
-
-        cboSearch = new JComboBox<>();
-        cboSearch.setEditable(true);
-        cboSearch.setPreferredSize(new Dimension(350, 35));
-        cboSearch.setFont(new Font("Segoe UI", Font.PLAIN, 14));
-
-        JLabel lblQty = new JLabel("Số lượng:");
-        lblQty.setFont(new Font("Segoe UI", Font.BOLD, 14));
-
-        spnQty = new JSpinner(new SpinnerNumberModel(1, 1, 999, 1));
-        spnQty.setPreferredSize(new Dimension(80, 35));
-
-        btnAdd = createButton("➕ Thêm vào giỏ", new Color(41, 128, 185));
-
-        pnlTop.add(lblSearch);
-        pnlTop.add(cboSearch);
-        pnlTop.add(lblQty);
-        pnlTop.add(spnQty);
-        pnlTop.add(btnAdd);
-
-        add(pnlTop, BorderLayout.NORTH);
-
-        // ---------------- CENTER ----------------
         JPanel pnlCenter = new JPanel(new GridLayout(1, 2, 15, 0));
         pnlCenter.setOpaque(false);
+        pnlCenter.add(buildProductPanel());
+        pnlCenter.add(buildCartPanel());
+        add(pnlCenter, BorderLayout.CENTER);
 
-        // LEFT - PRODUCT TABLE
-        JPanel pnlLeft = new JPanel(new BorderLayout(0, 5));
-        pnlLeft.setOpaque(false);
-        JLabel lblProdTitle = new JLabel("DANH SÁCH SẢN PHẨM");
-        lblProdTitle.setFont(new Font("Segoe UI", Font.BOLD, 14));
+        JPanel pnlBottom = new JPanel(new BorderLayout(15, 0));
+        pnlBottom.setOpaque(false);
+        pnlBottom.add(buildCustomerAndSettingsPanel(), BorderLayout.WEST);
+        pnlBottom.add(buildPaymentPanel(), BorderLayout.EAST);
+        add(pnlBottom, BorderLayout.SOUTH);
+    }
 
-        modProducts = new DefaultTableModel(new Object[]{"Mã SP", "Tên SP", "Giá bán", "Tồn kho"}, 0) {
+    private JPanel buildTopBar() {
+        ModernCardPanel pnl = new ModernCardPanel(10);
+        pnl.setLayout(new FlowLayout(FlowLayout.LEFT, 15, 12));
+        pnl.setPreferredSize(new Dimension(0, 65));
+
+        JLabel lblIcon = new JLabel("🔍");
+        cboSearch = new JComboBox<>();
+        cboSearch.setEditable(true);
+        cboSearch.setPreferredSize(new Dimension(400, 40));
+        cboSearch.setFont(new Font("Segoe UI", Font.PLAIN, 14));
+
+        spnQtyAdd = new JSpinner(new SpinnerNumberModel(1, 1, 999, 1));
+        spnQtyAdd.setPreferredSize(new Dimension(70, 40));
+
+        btnAdd = new ModernButton("Thêm vào giỏ", PRIMARY_BLUE, Color.WHITE);
+        btnAdd.setPreferredSize(new Dimension(130, 40));
+
+        pnl.add(lblIcon);
+        pnl.add(cboSearch);
+        pnl.add(new JLabel(" SL: "));
+        pnl.add(spnQtyAdd);
+        pnl.add(btnAdd);
+
+        return pnl;
+    }
+
+    private JPanel buildProductPanel() {
+        ModernCardPanel pnl = new ModernCardPanel(10);
+        pnl.setLayout(new BorderLayout(0, 10));
+        pnl.setBorder(new EmptyBorder(15, 15, 15, 15));
+
+        JLabel lblTitle = new JLabel("📦 DANH SÁCH SẢN PHẨM");
+        lblTitle.setFont(new Font("Segoe UI", Font.BOLD, 15));
+        lblTitle.setForeground(TEXT_DARK);
+        pnl.add(lblTitle, BorderLayout.NORTH);
+
+        modProducts = new DefaultTableModel(new Object[]{"Mã SP", "Tên SP", "Giá bán", "Kho"}, 0) {
             @Override
-            public boolean isCellEditable(int row, int column) {
+            public boolean isCellEditable(int r, int c) {
                 return false;
             }
         };
         tblProducts = createTable(modProducts);
-        pnlLeft.add(lblProdTitle, BorderLayout.NORTH);
-        pnlLeft.add(new JScrollPane(tblProducts), BorderLayout.CENTER);
+        tblProducts.getColumnModel().getColumn(1).setPreferredWidth(250);
 
-        // RIGHT - CART & WARNING
-        JPanel pnlRight = new JPanel(new BorderLayout(0, 5));
-        pnlRight.setOpaque(false);
+        pnl.add(new JScrollPane(tblProducts), BorderLayout.CENTER);
+        return pnl;
+    }
 
+    private JPanel buildCartPanel() {
+        ModernCardPanel pnl = new ModernCardPanel(10);
+        pnl.setLayout(new BorderLayout(0, 10));
+        pnl.setBorder(new EmptyBorder(15, 15, 15, 15));
+
+        // Header & Actions
+        JPanel pnlHeaderTop = new JPanel(new BorderLayout());
+        pnlHeaderTop.setOpaque(false);
+        JLabel lblTitle = new JLabel("🛒 GIỎ HÀNG HIỆN TẠI");
+        lblTitle.setFont(new Font("Segoe UI", Font.BOLD, 15));
+        lblTitle.setForeground(SUCCESS_GREEN);
+
+        JPanel pnlActions = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 0));
+        pnlActions.setOpaque(false);
+        btnRemove = new ModernButton("➖ Xóa món", new Color(149, 165, 166), Color.WHITE);
+        btnRemove.setPreferredSize(new Dimension(110, 32));
+        btnCancel = new ModernButton("🗑 Hủy đơn", DANGER_RED, Color.WHITE);
+        btnCancel.setPreferredSize(new Dimension(110, 32));
+        pnlActions.add(btnRemove);
+        pnlActions.add(btnCancel);
+
+        pnlHeaderTop.add(lblTitle, BorderLayout.WEST);
+        pnlHeaderTop.add(pnlActions, BorderLayout.EAST);
+
+        // Cảnh báo
         pnlWarning = new JPanel(new FlowLayout(FlowLayout.LEFT));
-        pnlWarning.setBackground(new Color(255, 243, 205));
-        pnlWarning.setBorder(BorderFactory.createLineBorder(new Color(255, 238, 186)));
-        lblWarningMsg = new JLabel("⚠ Sản phẩm không đủ tồn kho. Giỏ hàng đã đồng bộ theo dữ liệu mới nhất!");
-        lblWarningMsg.setForeground(new Color(133, 100, 4));
-        lblWarningMsg.setFont(new Font("Segoe UI", Font.BOLD, 13));
+        pnlWarning.setBackground(new Color(253, 237, 236));
+        lblWarningMsg = new JLabel("⚠ Lỗi: Có sản phẩm vượt tồn kho!");
+        lblWarningMsg.setForeground(DANGER_RED);
+        lblWarningMsg.setFont(new Font("Segoe UI", Font.BOLD, 12));
         pnlWarning.add(lblWarningMsg);
         pnlWarning.setVisible(false);
 
-        JPanel pnlCartHeader = new JPanel(new BorderLayout());
-        pnlCartHeader.setOpaque(false);
-        JLabel lblCartTitle = new JLabel("GIỎ HÀNG");
-        lblCartTitle.setFont(new Font("Segoe UI", Font.BOLD, 14));
-        lblCartTitle.setForeground(new Color(39, 174, 96));
-        pnlCartHeader.add(lblCartTitle, BorderLayout.NORTH);
-        pnlCartHeader.add(pnlWarning, BorderLayout.SOUTH);
+        JPanel pnlHeader = new JPanel(new BorderLayout());
+        pnlHeader.setOpaque(false);
+        pnlHeader.add(pnlHeaderTop, BorderLayout.NORTH);
+        pnlHeader.add(pnlWarning, BorderLayout.SOUTH);
+        pnl.add(pnlHeader, BorderLayout.NORTH);
 
-        // 🌟 Bảng Cart 7 Cột Mới
-        modCart = new DefaultTableModel(new Object[]{"Mã SP", "Tên SP", "SL", "Đơn giá", "Thành tiền", "Tồn", "Trạng thái"}, 0) {
+        // Bảng Cart
+        modCart = new DefaultTableModel(new Object[]{"Mã SP", "Sản phẩm", "Số lượng", "Đơn giá", "Thành tiền", "Tồn", "Trạng thái"}, 0) {
             @Override
-            public boolean isCellEditable(int row, int column) {
-                return false;
+            public boolean isCellEditable(int row, int col) {
+                return col == 2;
             }
         };
         tblCart = createTable(modCart);
-        tblCart.setDefaultRenderer(Object.class, new CartTableRenderer());
+        tblCart.getColumnModel().getColumn(1).setPreferredWidth(220);
+        tblCart.getColumnModel().getColumn(2).setPreferredWidth(100);
 
-        pnlRight.add(pnlCartHeader, BorderLayout.NORTH);
-        pnlRight.add(new JScrollPane(tblCart), BorderLayout.CENTER);
+        tblCart.getColumnModel().getColumn(2).setCellRenderer(new QuantitySpinnerRenderer());
+        tblCart.getColumnModel().getColumn(2).setCellEditor(new QuantitySpinnerEditor());
 
-        pnlCenter.add(pnlLeft);
-        pnlCenter.add(pnlRight);
-        add(pnlCenter, BorderLayout.CENTER);
+        CartTableRenderer cartRenderer = new CartTableRenderer();
+        for (int i = 0; i < tblCart.getColumnCount(); i++) {
+            if (i != 2) {
+                tblCart.getColumnModel().getColumn(i).setCellRenderer(cartRenderer);
+            }
+        }
 
-        // ---------------- BOTTOM ----------------
-        JPanel pnlBottom = new JPanel(new BorderLayout(10, 10));
-        pnlBottom.setOpaque(false);
+        pnl.add(new JScrollPane(tblCart), BorderLayout.CENTER);
+        return pnl;
+    }
 
-        JPanel pnlCustomer = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 10));
-        pnlCustomer.setOpaque(false);
-        txtCustomerPhone = new JTextField(12);
-        txtCustomerPhone.setPreferredSize(new Dimension(160, 35));
-        btnFindCustomer = createButton("Tìm KH", new Color(52, 152, 219));
-        lblCustomerInfo = new JLabel("Khách vãng lai (0%)");
-        lblCustomerInfo.setFont(new Font("Segoe UI", Font.BOLD, 14));
-        lblCustomerInfo.setForeground(new Color(41, 128, 185));
+    private JPanel buildCustomerAndSettingsPanel() {
+        JPanel pnlCombine = new JPanel(new BorderLayout(0, 15));
+        pnlCombine.setOpaque(false);
+        pnlCombine.setPreferredSize(new Dimension(450, 0));
 
-        pnlCustomer.add(new JLabel("SĐT khách:"));
-        pnlCustomer.add(txtCustomerPhone);
-        pnlCustomer.add(btnFindCustomer);
-        pnlCustomer.add(lblCustomerInfo);
+        // --- 1. Customer Panel ---
+        ModernCardPanel pnlCust = new ModernCardPanel(10);
+        pnlCust.setLayout(new GridBagLayout());
+        pnlCust.setBorder(new EmptyBorder(10, 15, 10, 15));
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.fill = GridBagConstraints.HORIZONTAL;
+        gbc.insets = new Insets(5, 5, 5, 5);
 
-        JPanel pnlPayment = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 10));
-        pnlPayment.setOpaque(false);
+        txtCustomerPhone = new JTextField();
+        txtCustomerPhone.setPreferredSize(new Dimension(140, 35));
+        btnFindCustomer = new ModernButton("Tìm KH", PRIMARY_BLUE, Color.WHITE);
+        btnFindCustomer.setPreferredSize(new Dimension(80, 35));
+
+        lblCusName = new JLabel("Khách vãng lai");
+        lblCusName.setFont(new Font("Segoe UI", Font.BOLD, 14));
+
+        lblCusRank = new JLabel("Rank: Thường");
+        pnlRankBadge = new JPanel(new BorderLayout());
+        pnlRankBadge.setOpaque(false);
+        pnlRankBadge.add(lblCusRank, BorderLayout.WEST);
+
+        lblCusTotalSpend = new JLabel("Chi tiêu: 0 đ");
+
+        gbc.gridx = 0;
+        gbc.gridy = 0;
+        pnlCust.add(new JLabel("SĐT:"), gbc);
+        gbc.gridx = 1;
+        pnlCust.add(txtCustomerPhone, gbc);
+        gbc.gridx = 2;
+        pnlCust.add(btnFindCustomer, gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 1;
+        gbc.gridwidth = 3;
+        pnlCust.add(new JSeparator(), gbc);
+
+        gbc.gridy = 2;
+        gbc.gridwidth = 1;
+        pnlCust.add(lblCusName, gbc);
+        gbc.gridx = 1;
+        pnlCust.add(pnlRankBadge, gbc);
+        gbc.gridx = 2;
+        pnlCust.add(lblCusTotalSpend, gbc);
+
+        pnlCombine.add(pnlCust, BorderLayout.NORTH);
+
+        // --- 2. KPI & Settings ---
+        ModernCardPanel pnlKpiSet = new ModernCardPanel(10);
+        pnlKpiSet.setLayout(new GridLayout(1, 2, 10, 0));
+        pnlKpiSet.setBorder(new EmptyBorder(10, 15, 10, 15));
+
+        JPanel pKpi = new JPanel(new GridLayout(4, 1));
+        pKpi.setOpaque(false);
+        pKpi.add(new JLabel("📊 KPI NHÂN VIÊN"));
+        lblKpiItems = new JLabel("Tổng SP bán: 0");
+        lblKpiTotal = new JLabel("Doanh thu: 0 đ");
+        lblKpiStatus = new JLabel("Đánh giá: CHƯA ĐẠT");
+        lblKpiStatus.setForeground(TEXT_GRAY);
+        pKpi.add(lblKpiItems);
+        pKpi.add(lblKpiTotal);
+        pKpi.add(lblKpiStatus);
+
+        JPanel pSet = new JPanel(new GridLayout(4, 1));
+        pSet.setOpaque(false);
+        pSet.add(new JLabel("⚙ CẤU HÌNH"));
+        chkAutoDiscount = new ToggleButton("Tự áp mã giảm giá");
+        chkAutoDiscount.setSelected(true);
+        chkRealtimeSync = new ToggleButton("Đồng bộ kho realtime");
+        chkRealtimeSync.setSelected(true);
+        chkPrintBill = new ToggleButton("In hóa đơn khi thanh toán");
+        pSet.add(chkAutoDiscount);
+        pSet.add(chkRealtimeSync);
+        pSet.add(chkPrintBill);
+
+        pnlKpiSet.add(pKpi);
+        pnlKpiSet.add(pSet);
+
+        pnlCombine.add(pnlKpiSet, BorderLayout.CENTER);
+        return pnlCombine;
+    }
+
+    private JPanel buildPaymentPanel() {
+        ModernCardPanel pnl = new ModernCardPanel(10);
+        pnl.setLayout(new GridBagLayout());
+        pnl.setBorder(new EmptyBorder(15, 25, 15, 25));
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.fill = GridBagConstraints.HORIZONTAL;
+        gbc.insets = new Insets(8, 10, 8, 10);
+
         cboPaymentMethod = new JComboBox<>();
-        cboPaymentMethod.setPreferredSize(new Dimension(180, 40));
-        lblTotal = new JLabel("Tổng tiền: 0 đ");
-        lblTotal.setFont(new Font("Segoe UI", Font.BOLD, 20));
-        lblTotal.setForeground(new Color(192, 57, 43));
+        cboPaymentMethod.setPreferredSize(new Dimension(220, 40));
+        cboPaymentMethod.setFont(new Font("Segoe UI", Font.PLAIN, 15));
 
-        btnRemove = createButton("➖ Xóa món", new Color(243, 156, 18));
-        btnCancel = createButton("🗑 Hủy đơn", new Color(231, 76, 60));
-        btnPay = createButton("✔ Thanh toán", new Color(39, 174, 96));
+        lblSubTotal = new JLabel("0 đ", SwingConstants.RIGHT);
+        lblSubTotal.setFont(new Font("Segoe UI", Font.BOLD, 15));
 
-        pnlPayment.add(cboPaymentMethod);
-        pnlPayment.add(lblTotal);
-        pnlPayment.add(btnRemove);
-        pnlPayment.add(btnCancel);
-        pnlPayment.add(btnPay);
+        lblDiscount = new JLabel("0 đ", SwingConstants.RIGHT);
+        lblDiscount.setForeground(SUCCESS_GREEN);
+        lblDiscount.setFont(new Font("Segoe UI", Font.BOLD, 15));
 
-        pnlBottom.add(pnlCustomer, BorderLayout.WEST);
-        pnlBottom.add(pnlPayment, BorderLayout.EAST);
-        add(pnlBottom, BorderLayout.SOUTH);
+        lblTotalPay = new JLabel("0 đ", SwingConstants.RIGHT);
+        lblTotalPay.setFont(new Font("Segoe UI", Font.BOLD, 32)); // TO KHỔNG LỒ
+        lblTotalPay.setForeground(DANGER_RED);
+
+        btnPay = new ModernButton("✔ THANH TOÁN", SUCCESS_GREEN, Color.WHITE);
+        btnPay.setPreferredSize(new Dimension(0, 60)); // Nút thanh toán cao
+        btnPay.setFont(new Font("Segoe UI", Font.BOLD, 20));
+        btnPay.setEnabled(false);
+
+        // Canh chỉnh dạng Hóa đơn
+        gbc.gridx = 0;
+        gbc.gridy = 0;
+        gbc.weightx = 0.4;
+        pnl.add(new JLabel("Phương thức TT:"), gbc);
+        gbc.gridx = 1;
+        gbc.weightx = 0.6;
+        pnl.add(cboPaymentMethod, gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 1;
+        pnl.add(new JLabel("Tổng tạm tính:"), gbc);
+        gbc.gridx = 1;
+        pnl.add(lblSubTotal, gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 2;
+        pnl.add(new JLabel("Giảm giá thẻ:"), gbc);
+        gbc.gridx = 1;
+        pnl.add(lblDiscount, gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 3;
+        gbc.gridwidth = 2;
+        pnl.add(new JSeparator(), gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 4;
+        gbc.gridwidth = 1;
+        JLabel lblT = new JLabel("TỔNG TIỀN:");
+        lblT.setFont(new Font("Segoe UI", Font.BOLD, 18));
+        pnl.add(lblT, gbc);
+        gbc.gridx = 1;
+        pnl.add(lblTotalPay, gbc);
+
+        gbc.gridx = 0;
+        gbc.gridy = 5;
+        gbc.gridwidth = 2;
+        gbc.insets = new Insets(15, 10, 0, 10);
+        pnl.add(btnPay, gbc);
+
+        return pnl;
     }
 
     // =========================================================
-    // EVENTS
+    // LOGIC & EVENTS
     // =========================================================
     private void initEvents() {
         JTextField txtEditor = (JTextField) cboSearch.getEditor().getEditorComponent();
         txtEditor.setText(SEARCH_HINT);
         txtEditor.setForeground(Color.GRAY);
-
         txtEditor.addFocusListener(new FocusAdapter() {
             @Override
             public void focusGained(FocusEvent e) {
@@ -247,13 +429,12 @@ public class SellPanel extends JPanel {
 
             @Override
             public void focusLost(FocusEvent e) {
-                if (txtEditor.getText().trim().isEmpty()) {
+                if (txtEditor.getText().isBlank()) {
                     txtEditor.setText(SEARCH_HINT);
                     txtEditor.setForeground(Color.GRAY);
                 }
             }
         });
-
         txtEditor.addKeyListener(new KeyAdapter() {
             @Override
             public void keyReleased(KeyEvent e) {
@@ -264,27 +445,21 @@ public class SellPanel extends JPanel {
                 if (e.getKeyCode() == KeyEvent.VK_UP || e.getKeyCode() == KeyEvent.VK_DOWN) {
                     return;
                 }
-
                 SwingUtilities.invokeLater(() -> {
-                    String keyword = txtEditor.getText().trim();
+                    String kw = txtEditor.getText().trim();
                     cboSearch.removeAllItems();
-                    if (keyword.isEmpty() || keyword.equalsIgnoreCase(SEARCH_HINT)) {
+                    if (kw.isBlank() || kw.equals(SEARCH_HINT)) {
                         return;
                     }
-
-                    cboSearch.addItem(keyword);
-                    boolean hasData = false;
+                    cboSearch.addItem(kw);
+                    boolean has = false;
                     for (Product p : allProducts) {
-                        if (p.getQuantity() <= 0) {
-                            continue;
-                        }
-                        String label = p.getProductId() + " - " + p.getProductName();
-                        if (label.toLowerCase().contains(keyword.toLowerCase())) {
-                            cboSearch.addItem(label);
-                            hasData = true;
+                        if (p.getQuantity() > 0 && (p.getProductId() + " " + p.getProductName()).toLowerCase().contains(kw.toLowerCase())) {
+                            cboSearch.addItem(p.getProductId() + " - " + p.getProductName());
+                            has = true;
                         }
                     }
-                    if (hasData) {
+                    if (has) {
                         cboSearch.showPopup();
                     } else {
                         cboSearch.hidePopup();
@@ -296,38 +471,38 @@ public class SellPanel extends JPanel {
         tblProducts.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent e) {
-                if (e.getClickCount() == 2) {
-                    int row = tblProducts.getSelectedRow();
-                    if (row >= 0) {
-                        addToCart(tblProducts.getValueAt(row, 0).toString(), (int) spnQty.getValue());
-                    }
+                if (e.getClickCount() == 2 && tblProducts.getSelectedRow() >= 0) {
+                    addToCart(tblProducts.getValueAt(tblProducts.getSelectedRow(), 0).toString(), (int) spnQtyAdd.getValue());
                 }
             }
         });
 
         btnAdd.addActionListener(e -> {
-            String selected = cboSearch.getSelectedItem() != null ? cboSearch.getSelectedItem().toString() : "";
-            if (selected.isBlank() || selected.equalsIgnoreCase(SEARCH_HINT)) {
-                int row = tblProducts.getSelectedRow();
-                if (row < 0) {
-                    JOptionPane.showMessageDialog(this, "Vui lòng chọn sản phẩm!");
+            String sel = cboSearch.getSelectedItem() != null ? cboSearch.getSelectedItem().toString() : "";
+            if (sel.isBlank() || sel.equals(SEARCH_HINT)) {
+                if (tblProducts.getSelectedRow() < 0) {
+                    JOptionPane.showMessageDialog(this, "Chọn SP cần thêm!");
                     return;
                 }
-                selected = tblProducts.getValueAt(row, 0).toString();
+                sel = tblProducts.getValueAt(tblProducts.getSelectedRow(), 0).toString();
             }
-            String productId = selected.contains(" - ") ? selected.split(" - ")[0].trim() : selected.trim();
-            addToCart(productId, (int) spnQty.getValue());
+            addToCart(sel.split(" - ")[0].trim(), (int) spnQtyAdd.getValue());
             txtEditor.setText("");
-            spnQty.setValue(1);
+            spnQtyAdd.setValue(1);
         });
 
+        // 🌟 XÓA ĐƯỢC NHIỀU DÒNG CÙNG LÚC
         btnRemove.addActionListener(e -> {
-            int row = tblCart.getSelectedRow();
-            if (row < 0) {
-                JOptionPane.showMessageDialog(this, "Vui lòng chọn sản phẩm trong giỏ!");
+            int[] selectedRows = tblCart.getSelectedRows();
+            if (selectedRows.length == 0) {
+                JOptionPane.showMessageDialog(this, "Vui lòng chọn các sản phẩm trong giỏ để xóa!");
                 return;
             }
-            modCart.removeRow(row);
+            isUpdatingCart = true;
+            for (int i = selectedRows.length - 1; i >= 0; i--) {
+                modCart.removeRow(selectedRows[i]);
+            }
+            isUpdatingCart = false;
             calculateTotal();
             refreshCartRealtime();
         });
@@ -336,109 +511,233 @@ public class SellPanel extends JPanel {
         txtCustomerPhone.addActionListener(e -> btnFindCustomer.doClick());
         btnFindCustomer.addActionListener(e -> findCustomer());
         btnPay.addActionListener(e -> processPayment());
+        chkAutoDiscount.addActionListener(e -> calculateTotal());
+
+        // CẬP NHẬT SPINNER TRONG GIỎ
+        modCart.addTableModelListener(e -> {
+            if (isUpdatingCart) {
+                return;
+            }
+
+            if (e.getColumn() == 2 && e.getType() == javax.swing.event.TableModelEvent.UPDATE) {
+                int r = e.getFirstRow();
+                if (r < 0 || r >= modCart.getRowCount()) {
+                    return;
+                }
+
+                SwingUtilities.invokeLater(() -> {
+                    isUpdatingCart = true;
+                    try {
+                        int qty = Integer.parseInt(modCart.getValueAt(r, 2).toString());
+                        if (qty <= 0) {
+                            if (JOptionPane.showConfirmDialog(this, "Xóa sản phẩm này?", "Xác nhận", JOptionPane.YES_NO_OPTION) == 0) {
+                                modCart.removeRow(r);
+                            } else {
+                                modCart.setValueAt(1, r, 2);
+                                double price = Double.parseDouble(modCart.getValueAt(r, 3).toString());
+                                modCart.setValueAt(price * 1, r, 4);
+                            }
+                        } else {
+                            double price = Double.parseDouble(modCart.getValueAt(r, 3).toString());
+                            modCart.setValueAt(price * qty, r, 4);
+                        }
+                        calculateTotal();
+                        refreshCartRealtime();
+                    } catch (Exception ex) {
+                    } finally {
+                        isUpdatingCart = false;
+                    }
+                });
+            }
+        });
     }
 
-    // =========================================================
-    // CART & REALTIME LOGIC
-    // =========================================================
-    private void addToCart(String productId, int qtyToAdd) {
-        Product product = allProducts.stream().filter(p -> p.getProductId().equalsIgnoreCase(productId)).findFirst().orElse(null);
-        if (product == null) {
-            JOptionPane.showMessageDialog(this, "Không tìm thấy sản phẩm!");
+    private void addToCart(String pId, int qty) {
+        Product p = allProducts.stream().filter(x -> x.getProductId().equals(pId)).findFirst().orElse(null);
+        if (p == null || p.getQuantity() <= 0) {
             return;
         }
-        if (product.getQuantity() <= 0) {
-            JOptionPane.showMessageDialog(this, "Sản phẩm đã hết hàng!");
-            return;
-        }
-
-        double price = product.getBasePrice() != null ? product.getBasePrice().doubleValue() : 0;
+        double price = p.getBasePrice().doubleValue();
 
         for (int i = 0; i < modCart.getRowCount(); i++) {
-            if (modCart.getValueAt(i, 0).toString().equalsIgnoreCase(productId)) {
-                int oldQty = (int) modCart.getValueAt(i, 2);
-                modCart.setValueAt(oldQty + qtyToAdd, i, 2);
-                modCart.setValueAt(price * (oldQty + qtyToAdd), i, 4);
-                modCart.setValueAt(product.getQuantity(), i, 5); // Update tồn kho
-                calculateTotal();
-                refreshCartRealtime();
+            if (modCart.getValueAt(i, 0).equals(pId)) {
+                modCart.setValueAt(Integer.parseInt(modCart.getValueAt(i, 2).toString()) + qty, i, 2);
                 return;
             }
         }
 
-        modCart.addRow(new Object[]{
-            product.getProductId(), product.getProductName(), qtyToAdd, price, price * qtyToAdd, product.getQuantity(), ""
-        });
+        isUpdatingCart = true;
+        modCart.addRow(new Object[]{pId, p.getProductName(), qty, price, price * qty, p.getQuantity(), ""});
+        isUpdatingCart = false;
+
         calculateTotal();
         refreshCartRealtime();
     }
 
     private void refreshCartRealtime() {
-        boolean hasError = false;
+        boolean err = false;
+        totalItems = 0;
+
+        isUpdatingCart = true;
         for (int i = 0; i < modCart.getRowCount(); i++) {
-            String productId = modCart.getValueAt(i, 0).toString();
-            int reqQty = (int) modCart.getValueAt(i, 2);
-            int newStock = getStockFromDB(productId);
-            modCart.setValueAt(newStock, i, 5);
-            if (reqQty > newStock) {
-                hasError = true;
+            int q = Integer.parseInt(modCart.getValueAt(i, 2).toString());
+            int stock = getStockFromDB(modCart.getValueAt(i, 0).toString());
+            modCart.setValueAt(stock, i, 5);
+            totalItems += q;
+            if (q > stock) {
+                err = true;
             }
         }
+        isUpdatingCart = false;
 
-        if (pnlWarning != null) {
-            pnlWarning.setVisible(hasError);
-        }
-        if (btnPay != null) {
-            btnPay.setEnabled(!hasError && modCart.getRowCount() > 0);
-        }
-        if (tblCart != null) {
-            tblCart.repaint();
-        }
+        pnlWarning.setVisible(err);
+        btnPay.setEnabled(!err && modCart.getRowCount() > 0);
+        updateKpiMiniPanel();
+        tblCart.repaint();
     }
 
     private void clearCart() {
+        isUpdatingCart = true;
         modCart.setRowCount(0);
-        currentTotal = 0;
-        finalAmountToPay = 0;
-        resetCustomerInfo();
-        lblTotal.setText("Tổng tiền: 0 đ");
-        if (pnlWarning != null) {
-            pnlWarning.setVisible(false);
-        }
-        if (btnPay != null) {
-            btnPay.setEnabled(false);
-        }
+        isUpdatingCart = false;
+        calculateTotal();
+        refreshCartRealtime();
     }
 
     private void calculateTotal() {
-        currentTotal = 0;
+        double sub = 0;
         for (int i = 0; i < modCart.getRowCount(); i++) {
-            currentTotal += (double) modCart.getValueAt(i, 4);
+            sub += Double.parseDouble(modCart.getValueAt(i, 4).toString());
         }
-        double discountRate = selectedCustomer != null ? selectedCustomer.getDiscountRate() : 0;
-        double discountAmount = currentTotal * discountRate;
-        finalAmountToPay = currentTotal - discountAmount;
 
-        if (discountRate > 0) {
-            lblTotal.setText(String.format("Tổng: %s | Giảm: -%s | Trả: %s", moneyFormat.format(currentTotal), moneyFormat.format(discountAmount), moneyFormat.format(finalAmountToPay)));
+        double rate = (chkAutoDiscount.isSelected() && selectedCustomer != null) ? selectedCustomer.getDiscountRate() : 0;
+        double disc = sub * rate;
+        finalAmountToPay = sub - disc;
+
+        lblSubTotal.setText(moneyFormat.format(sub));
+        lblDiscount.setText("- " + moneyFormat.format(disc));
+        lblTotalPay.setText(moneyFormat.format(finalAmountToPay));
+
+        updateKpiMiniPanel();
+    }
+
+    private void updateKpiMiniPanel() {
+        currentKpiEval.setActualValue(finalAmountToPay);
+        currentKpiEval.setAchievedScore((finalAmountToPay >= 500000) ? 100 : (finalAmountToPay >= 100000) ? 50 : 0);
+
+        lblKpiItems.setText("Tổng SP bán: " + totalItems);
+        lblKpiTotal.setText("Doanh thu tạm: " + moneyFormat.format(finalAmountToPay));
+
+        if (currentKpiEval.getAchievedScore() >= 100) {
+            lblKpiStatus.setText("Đánh giá: TỐT");
+            lblKpiStatus.setForeground(SUCCESS_GREEN);
+        } else if (currentKpiEval.getAchievedScore() >= 50) {
+            lblKpiStatus.setText("Đánh giá: ĐẠT");
+            lblKpiStatus.setForeground(PRIMARY_BLUE);
         } else {
-            lblTotal.setText("Tổng tiền: " + moneyFormat.format(currentTotal));
+            lblKpiStatus.setText("Đánh giá: CHƯA ĐẠT");
+            lblKpiStatus.setForeground(TEXT_GRAY);
         }
     }
 
     // =========================================================
-    // DATABASE QUERY
+    // CUSTOMER RULE & LOGIC
+    // =========================================================
+    private void findCustomer() {
+        String p = txtCustomerPhone.getText().trim();
+        if (p.isBlank()) {
+            selectedCustomer = null;
+            updateCustomerUI();
+            return;
+        }
+        selectedCustomer = CustomersSql.getInstance().findByPhone(p);
+        if (selectedCustomer != null) {
+            updateCustomerUI();
+            return;
+        }
+
+        if (JOptionPane.showConfirmDialog(this, "Không thấy KH! Đăng ký?", "Đăng ký", JOptionPane.YES_NO_OPTION) == 0) {
+            JTextField txtName = new JTextField();
+            if (JOptionPane.showConfirmDialog(this, new Object[]{"Tên:", txtName, "SĐT:", new JLabel(p)}, "Đăng ký", 2) == 0) {
+                Customer c = new Customer();
+                c.setCustomerId("CUS" + System.currentTimeMillis());
+                c.setCustomerName(txtName.getText());
+                c.setPhone(p);
+                c.setMemberRank("Thường");
+                c.setTotalSpending(0);
+
+                if (CustomersSql.getInstance().insert(c) > 0) {
+                    selectedCustomer = c;
+                    updateCustomerUI();
+                    notifySystemChanged();
+                }
+            }
+        } else {
+            selectedCustomer = null;
+            updateCustomerUI();
+        }
+    }
+
+    private void updateCustomerUI() {
+        if (selectedCustomer == null) {
+            lblCusName.setText("Khách vãng lai");
+            lblCusRank.setText("Rank: Thường");
+            lblCusRank.setForeground(TEXT_GRAY);
+            lblCusTotalSpend.setText("Chi tiêu: 0 đ");
+        } else {
+            lblCusName.setText(selectedCustomer.getCustomerName());
+
+            double spend = selectedCustomer.getTotalSpending();
+            String rank = selectedCustomer.getMemberRank();
+            double rate = selectedCustomer.getDiscountRate();
+
+            if (rank == null) {
+                rank = "Thường";
+            }
+
+            Color c = TEXT_GRAY;
+            String rankDisplay = rank;
+
+            if (rank.equalsIgnoreCase("Kim Cương")) {
+                c = new Color(155, 89, 182);
+                rankDisplay = "Kim Cương 💎";
+            } else if (rank.equalsIgnoreCase("Vàng")) {
+                c = WARNING_YELLOW;
+                rankDisplay = "Vàng 🥇";
+            } else if (rank.equalsIgnoreCase("Bạc")) {
+                c = new Color(189, 195, 199);
+                rankDisplay = "Bạc 🥈";
+            } else if (rank.equalsIgnoreCase("Đồng")) {
+                c = new Color(205, 127, 50);
+                rankDisplay = "Đồng";
+            }
+
+            lblCusRank.setText("Rank: " + rankDisplay + " (" + (int) (rate * 100) + "%)");
+            lblCusRank.setForeground(c);
+            lblCusTotalSpend.setText("Chi tiêu: " + moneyFormat.format(spend));
+        }
+        calculateTotal();
+    }
+
+    // =========================================================
+    // DB & PAYMENT LOGIC
     // =========================================================
     private void loadProducts() {
         new SwingWorker<List<Product>, Void>() {
             @Override
             protected List<Product> doInBackground() {
-                List<Product> products = ProductsSql.getInstance().searchByName("");
-                java.util.Map<String, Integer> stockMap = getAllStockFromDB();
-                for (Product p : products) {
+                List<Product> prds = ProductsSql.getInstance().searchByName("");
+                java.util.Map<String, Integer> stockMap = new java.util.HashMap<>();
+                try (java.sql.Connection con = common.db.DatabaseConnection.getConnection(); java.sql.PreparedStatement ps = con.prepareStatement("SELECT product_id, quantity FROM INVENTORY WHERE NVL(is_deleted, 0) = 0"); java.sql.ResultSet rs = ps.executeQuery()) {
+                    while (rs.next()) {
+                        stockMap.put(rs.getString("product_id"), rs.getInt("quantity"));
+                    }
+                } catch (Exception e) {
+                }
+                for (Product p : prds) {
                     p.setQuantity(stockMap.getOrDefault(p.getProductId(), 0));
                 }
-                return products;
+                return prds;
             }
 
             @Override
@@ -447,51 +746,25 @@ public class SellPanel extends JPanel {
                     allProducts = get();
                     modProducts.setRowCount(0);
                     for (Product p : allProducts) {
-                        if (p.getQuantity() <= 0) {
-                            continue;
+                        if (p.getQuantity() > 0) {
+                            modProducts.addRow(new Object[]{p.getProductId(), p.getProductName(), moneyFormat.format(p.getBasePrice()), p.getQuantity()});
                         }
-                        BigDecimal price = p.getBasePrice() != null ? p.getBasePrice() : BigDecimal.ZERO;
-                        modProducts.addRow(new Object[]{p.getProductId(), p.getProductName(), moneyFormat.format(price), p.getQuantity()});
                     }
                 } catch (Exception ex) {
-                    ex.printStackTrace();
                 }
             }
         }.execute();
     }
 
-    private java.util.Map<String, Integer> getAllStockFromDB() {
-        java.util.Map<String, Integer> stockMap = new java.util.HashMap<>();
-        String sql = "SELECT product_id, quantity FROM INVENTORY WHERE NVL(is_deleted, 0) = 0";
-        try (java.sql.Connection con = common.db.DatabaseConnection.getConnection()) {
-            if (con != null) {
-                try (java.sql.PreparedStatement ps = con.prepareStatement(sql); java.sql.ResultSet rs = ps.executeQuery()) {
-                    while (rs.next()) {
-                        stockMap.put(rs.getString("product_id"), rs.getInt("quantity"));
-                    }
+    private int getStockFromDB(String pId) {
+        try (java.sql.Connection con = common.db.DatabaseConnection.getConnection(); java.sql.PreparedStatement ps = con.prepareStatement("SELECT quantity FROM INVENTORY WHERE product_id = ?")) {
+            ps.setString(1, pId);
+            try (java.sql.ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    return rs.getInt(1);
                 }
             }
         } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return stockMap;
-    }
-
-    private int getStockFromDB(String productId) {
-        String sql = "SELECT quantity FROM INVENTORY WHERE product_id = ?";
-        try (java.sql.Connection con = common.db.DatabaseConnection.getConnection()) {
-            if (con != null) {
-                try (java.sql.PreparedStatement ps = con.prepareStatement(sql)) {
-                    ps.setString(1, productId);
-                    try (java.sql.ResultSet rs = ps.executeQuery()) {
-                        if (rs.next()) {
-                            return rs.getInt("quantity");
-                        }
-                    }
-                }
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
         }
         return 0;
     }
@@ -507,62 +780,50 @@ public class SellPanel extends JPanel {
             protected void done() {
                 try {
                     cboPaymentMethod.removeAllItems();
-                    for (PaymentMethod pm : get()) {
-                        cboPaymentMethod.addItem(pm.getPaymentMethodId());
+                    for (PaymentMethod p : get()) {
+                        cboPaymentMethod.addItem(p.getPaymentMethodId());
                     }
-                } catch (Exception ex) {
-                    ex.printStackTrace();
+                } catch (Exception e) {
                 }
             }
         }.execute();
     }
 
-    // =========================================================
-    // CHECKOUT LOGIC
-    // =========================================================
     private void processPayment() {
         if (modCart.getRowCount() <= 0) {
             return;
         }
-
         try {
-            String employeeId = "EMP_DEFAULT";
-            model.account.Account acc = SessionManager.getCurrentUser();
-            if (acc != null) {
-                // Ưu tiên lấy UserId (Mã EMP), nếu không có thì lấy AccountId (Mã ACC)
-                String uid = acc.getUserId();
-                String aid = acc.getAccountId();
-
-                if (uid != null && !uid.trim().isEmpty() && !uid.equalsIgnoreCase("null")) {
-                    employeeId = uid.trim();
-                } else if (aid != null && !aid.trim().isEmpty() && !aid.equalsIgnoreCase("null")) {
-                    employeeId = aid.trim();
-                }
+            String emp = "EMP_DEFAULT";
+            model.account.Account a = SessionManager.getCurrentUser();
+            if (a != null) {
+                emp = (a.getUserId() != null && !a.getUserId().isBlank()) ? a.getUserId() : a.getAccountId();
             }
 
-            String pmId = cboPaymentMethod.getSelectedItem() != null ? cboPaymentMethod.getSelectedItem().toString() : "PM_CASH";
-            String orderId = business.sql.sales_order.OrdersSql.getInstance().generateNextOrderId();
+            String pId = cboPaymentMethod.getSelectedItem() != null ? cboPaymentMethod.getSelectedItem().toString() : "PM_CASH";
+            String oId = business.sql.sales_order.OrdersSql.getInstance().generateNextOrderId();
 
-            Order order = new Order();
-            order.setOrderId(orderId);
-            order.setCustomerId(selectedCustomer != null ? selectedCustomer.getCustomerId() : null);
-            order.setEmployeeId(employeeId);
-            order.setPaymentMethodId(pmId);
-            order.setOrderDate(new java.sql.Date(System.currentTimeMillis()));
-            order.setTotalAmount(finalAmountToPay);
-            order.setStatus("Hoàn thành");
+            Order o = new Order();
+            o.setOrderId(oId);
+            o.setCustomerId(selectedCustomer != null ? selectedCustomer.getCustomerId() : null);
+            o.setEmployeeId(emp);
+            o.setPaymentMethodId(pId);
+            o.setOrderDate(new java.sql.Date(System.currentTimeMillis()));
+            o.setTotalAmount(finalAmountToPay);
+            o.setStatus("Hoàn thành");
 
-            List<OrderDetail> details = new ArrayList<>();
+            List<OrderDetail> dt = new ArrayList<>();
             for (int i = 0; i < modCart.getRowCount(); i++) {
-                String pId = modCart.getValueAt(i, 0).toString();
-                Product product = allProducts.stream().filter(p -> p.getProductId().equals(pId)).findFirst().orElse(null);
-                String uId = (product != null && product.getBaseUnitId() != null) ? product.getBaseUnitId() : "U_CAI";
-                details.add(new OrderDetail(orderId, pId, (int) modCart.getValueAt(i, 2), (double) modCart.getValueAt(i, 3), uId, 0));
+                String id = modCart.getValueAt(i, 0).toString();
+                Product p = allProducts.stream().filter(x -> x.getProductId().equals(id)).findFirst().orElse(null);
+                dt.add(new OrderDetail(oId, id, Integer.parseInt(modCart.getValueAt(i, 2).toString()), Double.parseDouble(modCart.getValueAt(i, 3).toString()), (p != null && p.getBaseUnitId() != null) ? p.getBaseUnitId() : "U_CAI", 0));
             }
 
-            boolean success = PaymentService.processCheckoutSecure(order, details);
-            if (success) {
-                JOptionPane.showMessageDialog(this, "✅ Thanh toán thành công!\nMã hóa đơn: " + orderId);
+            if (PaymentService.processCheckoutSecure(o, dt)) {
+                JOptionPane.showMessageDialog(this, "✅ Thanh toán thành công! Hóa đơn: " + oId);
+                if (chkPrintBill.isSelected()) {
+                    JOptionPane.showMessageDialog(this, "Đang gửi lệnh in hóa đơn...");
+                }
                 clearCart();
                 if (selectedCustomer != null) {
                     selectedCustomer = CustomersSql.getInstance().findByPhone(selectedCustomer.getPhone());
@@ -572,153 +833,271 @@ public class SellPanel extends JPanel {
                 notifySystemChanged();
             }
         } catch (common.exception.ConcurrentCheckoutException ex) {
-            StringBuilder errorMsg = new StringBuilder("Rất tiếc, giao dịch không thể hoàn tất do tồn kho vừa thay đổi.\nCác sản phẩm sau không đủ số lượng:\n\n");
-            java.util.Map<String, Integer> failedMap = ex.getFailedProducts();
+            StringBuilder sb = new StringBuilder("Lỗi: Tồn kho thay đổi. Vui lòng giảm SL món sau:\n");
             for (int i = 0; i < modCart.getRowCount(); i++) {
-                String pId = modCart.getValueAt(i, 0).toString();
-                if (failedMap.containsKey(pId)) {
-                    errorMsg.append(" • ").append(modCart.getValueAt(i, 1)).append("\n")
-                            .append("   - Bạn yêu cầu: ").append(modCart.getValueAt(i, 2)).append("\n")
-                            .append("   - Tồn kho chỉ còn: ").append(failedMap.get(pId)).append("\n\n");
+                String id = modCart.getValueAt(i, 0).toString();
+                if (ex.getFailedProducts().containsKey(id)) {
+                    sb.append("- ").append(modCart.getValueAt(i, 1)).append(" (Yêu cầu: ").append(modCart.getValueAt(i, 2)).append(", Kho: ").append(ex.getFailedProducts().get(id)).append(")\n");
                 }
             }
-            errorMsg.append("Giỏ hàng đã được đồng bộ lại. Vui lòng giảm số lượng để tiếp tục!");
             refreshCartRealtime();
-            JOptionPane.showMessageDialog(this, errorMsg.toString(), "XUNG ĐỘT TỒN KHO", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(this, sb.toString(), "XUNG ĐỘT", 0);
         } catch (Exception ex) {
-            JOptionPane.showMessageDialog(this, "Lỗi hệ thống: " + ex.getMessage(), "Lỗi", JOptionPane.ERROR_MESSAGE);
         }
-    }
-
-    // =========================================================
-    // CUSTOMER LOGIC
-    // =========================================================
-    private void findCustomer() {
-        String phone = txtCustomerPhone.getText().trim();
-        if (phone.isBlank()) {
-            resetCustomerInfo();
-            return;
-        }
-        selectedCustomer = CustomersSql.getInstance().findByPhone(phone);
-        if (selectedCustomer != null) {
-            updateCustomerUI();
-            return;
-        }
-        if (JOptionPane.showConfirmDialog(this, "Không tìm thấy khách hàng!\nĐăng ký nhanh?", "Thông báo", JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION) {
-            JTextField txtName = new JTextField();
-            if (JOptionPane.showConfirmDialog(this, new Object[]{"Tên khách hàng:", txtName, "SĐT:", new JLabel(phone)}, "Đăng ký", JOptionPane.OK_CANCEL_OPTION) == JOptionPane.OK_OPTION) {
-                Customer c = new Customer();
-                c.setCustomerId("CUS" + System.currentTimeMillis());
-                c.setCustomerName(txtName.getText().trim());
-                c.setPhone(phone);
-                c.setRewardPoints(0);
-                c.setMemberRank("Thường");
-                if (CustomersSql.getInstance().insert(c) > 0) {
-                    notifySystemChanged();
-                    selectedCustomer = CustomersSql.getInstance().findByPhone(phone);
-                    updateCustomerUI();
-                    JOptionPane.showMessageDialog(this, "✅ Đăng ký thành công!");
-                }
-            }
-        } else {
-            resetCustomerInfo();
-        }
-    }
-
-    private void updateCustomerUI() {
-        if (selectedCustomer == null) {
-            resetCustomerInfo();
-            return;
-        }
-        lblCustomerInfo.setText(String.format("Hạng: %s | Giảm: %.0f%% | Tổng chi: %s", selectedCustomer.getMemberRank(), selectedCustomer.getDiscountRate() * 100, moneyFormat.format(selectedCustomer.getTotalSpending())));
-        calculateTotal();
-    }
-
-    private void resetCustomerInfo() {
-        selectedCustomer = null;
-        txtCustomerPhone.setText("");
-        lblCustomerInfo.setText("Khách vãng lai (0%)");
-        calculateTotal();
     }
 
     private void notifySystemChanged() {
         try {
-            String[] tags = {"ORDERS", "INVENTORY", "PRODUCTS", "CUSTOMERS"};
-            for (String tag : tags) {
-                SyncVersionDao.bumpVersion(tag);
-                RealtimeClient.send(tag + "_CHANGED");
-                EventBus.publish(new AppDataChangedEvent(AppEventType.valueOf(tag), "POS Updated"));
+            String[] t = {"ORDERS", "INVENTORY", "PRODUCTS", "CUSTOMERS"};
+            for (String x : t) {
+                SyncVersionDao.bumpVersion(x);
+                RealtimeClient.send(x + "_CHANGED");
+                EventBus.publish(new AppDataChangedEvent(AppEventType.valueOf(x), ""));
             }
-        } catch (Exception ignored) {
+        } catch (Exception e) {
         }
     }
 
     // =========================================================
-    // UI UTILS & CUSTOM RENDERER
+    // CUSTOM UI CLASSES (SỬA LỖI MẤT NGOẶC Ở ĐÂY)
     // =========================================================
-    private JTable createTable(DefaultTableModel model) {
-        JTable table = new JTable(model);
-        table.setRowHeight(35);
-        table.getTableHeader().setFont(new Font("Segoe UI", Font.BOLD, 14));
-        DefaultTableCellRenderer center = new DefaultTableCellRenderer();
-        center.setHorizontalAlignment(JLabel.CENTER);
-        table.setDefaultRenderer(Object.class, center);
-        return table;
+    private JTable createTable(DefaultTableModel m) {
+        JTable t = new JTable(m);
+        t.setRowHeight(40);
+        t.setFont(new Font("Segoe UI", Font.PLAIN, 14));
+        t.getTableHeader().setFont(new Font("Segoe UI", Font.BOLD, 13));
+        t.getTableHeader().setBackground(new Color(236, 240, 241));
+        t.getTableHeader().setForeground(TEXT_DARK);
+        t.setShowVerticalLines(false);
+        t.setGridColor(BORDER_GRAY);
+        t.setSelectionBackground(new Color(212, 230, 241));
+        t.setSelectionForeground(TEXT_DARK);
+        DefaultTableCellRenderer c = new DefaultTableCellRenderer();
+        c.setHorizontalAlignment(JLabel.CENTER);
+        t.setDefaultRenderer(Object.class, c);
+        return t;
     }
 
-    private JButton createButton(String text, Color bg) {
-        JButton btn = new JButton(text);
-        btn.setFont(new Font("Segoe UI", Font.BOLD, 14));
-        btn.setBackground(bg);
-        btn.setForeground(Color.WHITE);
-        btn.setFocusPainted(false);
-        btn.setCursor(new Cursor(Cursor.HAND_CURSOR));
-        return btn;
+    class ModernCardPanel extends JPanel {
+
+        private int rad;
+
+        public ModernCardPanel(int r) {
+            this.rad = r;
+            setOpaque(false);
+        }
+
+        @Override
+        protected void paintComponent(Graphics g) {
+            Graphics2D g2 = (Graphics2D) g.create();
+            g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+            g2.setColor(CARD_WHITE);
+            g2.fillRoundRect(0, 0, getWidth(), getHeight(), rad, rad);
+            g2.setColor(BORDER_GRAY);
+            g2.drawRoundRect(0, 0, getWidth() - 1, getHeight() - 1, rad, rad);
+            g2.dispose();
+            super.paintComponent(g);
+        }
+    }
+
+    class ModernButton extends JButton {
+
+        public ModernButton(String text, Color bg, Color fg) {
+            super(text);
+            setFont(new Font("Segoe UI", Font.BOLD, 14));
+            setBackground(bg);
+            setForeground(fg);
+            setFocusPainted(false);
+            setBorderPainted(false);
+            setContentAreaFilled(false);
+            setOpaque(false);
+            setCursor(new Cursor(Cursor.HAND_CURSOR));
+        }
+
+        @Override
+        protected void paintComponent(Graphics g) {
+            Graphics2D g2 = (Graphics2D) g.create();
+            g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+            g2.setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
+
+            Color color = getBackground();
+            if (!isEnabled()) {
+                color = new Color(180, 180, 180);
+            } else if (getModel().isPressed()) {
+                color = getBackground().darker();
+            } else if (getModel().isRollover()) {
+                color = getBackground().brighter();
+            }
+
+            // Shadow
+            g2.setColor(new Color(0, 0, 0, 25));
+            g2.fillRoundRect(3, 4, getWidth() - 6, getHeight() - 4, 16, 16);
+            // Background
+            g2.setColor(color);
+            g2.fillRoundRect(0, 0, getWidth(), getHeight(), 16, 16);
+
+            g2.dispose();
+            super.paintComponent(g);
+        }
+    }
+
+    class ToggleButton extends JCheckBox {
+
+        public ToggleButton(String text) {
+            super(text);
+            setOpaque(false);
+            setFont(new Font("Segoe UI", Font.PLAIN, 13));
+            setCursor(new Cursor(Cursor.HAND_CURSOR));
+            setIcon(new ToggleIcon());
+            setSelectedIcon(new ToggleIcon());
+        }
+
+        class ToggleIcon implements Icon {
+
+            @Override
+            public void paintIcon(Component c, Graphics g, int x, int y) {
+                Graphics2D g2 = (Graphics2D) g.create();
+                g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+                AbstractButton b = (AbstractButton) c;
+                int w = 36, h = 18;
+                if (b.isSelected()) {
+                    g2.setColor(SUCCESS_GREEN);
+                    g2.fillRoundRect(x, y, w, h, h, h);
+                    g2.setColor(Color.WHITE);
+                    g2.fillOval(x + w - h + 2, y + 2, h - 4, h - 4);
+                } else {
+                    g2.setColor(new Color(200, 200, 200));
+                    g2.fillRoundRect(x, y, w, h, h, h);
+                    g2.setColor(Color.WHITE);
+                    g2.fillOval(x + 2, y + 2, h - 4, h - 4);
+                }
+                g2.dispose();
+            }
+
+            @Override
+            public int getIconWidth() {
+                return 40;
+            }
+
+            @Override
+            public int getIconHeight() {
+                return 18;
+            }
+        }
+    }
+
+    // 🌟 SPINNER EDITOR VÀ RENDERER
+    class QuantitySpinnerEditor extends DefaultCellEditor {
+
+        JSpinner s;
+
+        public QuantitySpinnerEditor() {
+            super(new JTextField());
+            setClickCountToStart(1);
+            s = new JSpinner(new SpinnerNumberModel(1, 0, 9999, 1));
+            s.setBorder(null);
+            ((JSpinner.DefaultEditor) s.getEditor()).getTextField().setHorizontalAlignment(0);
+            ((JSpinner.DefaultEditor) s.getEditor()).getTextField().setFont(new Font("Segoe UI", Font.BOLD, 14));
+            s.addChangeListener(e -> stopCellEditing());
+        }
+
+        @Override
+        public Component getTableCellEditorComponent(JTable t, Object v, boolean sel, int r, int c) {
+            this.s.setValue(Integer.parseInt(v.toString()));
+            return this.s;
+        }
+
+        @Override
+        public Object getCellEditorValue() {
+            return s.getValue();
+        }
+    }
+
+    class QuantitySpinnerRenderer extends JSpinner implements javax.swing.table.TableCellRenderer {
+
+        public QuantitySpinnerRenderer() {
+            super(new SpinnerNumberModel(1, 0, 9999, 1));
+            setBorder(null);
+            ((JSpinner.DefaultEditor) getEditor()).getTextField().setHorizontalAlignment(0);
+            ((JSpinner.DefaultEditor) getEditor()).getTextField().setFont(new Font("Segoe UI", Font.BOLD, 14));
+        }
+
+        @Override
+        public Component getTableCellRendererComponent(JTable t, Object v, boolean s, boolean f, int r, int c) {
+            if (v != null) {
+                setValue(Integer.parseInt(v.toString()));
+            }
+            try {
+                int q = Integer.parseInt(t.getValueAt(r, 2).toString());
+                int st = Integer.parseInt(t.getValueAt(r, 5).toString());
+                Color b = Color.WHITE;
+                if (!s) {
+                    if (q > st) {
+                        b = new Color(253, 237, 236);
+                    } else if (st <= 5) {
+                        b = new Color(254, 249, 231);
+                    }
+                } else {
+                    b = new Color(212, 230, 241);
+                }
+                setBackground(b);
+                ((JSpinner.DefaultEditor) getEditor()).getTextField().setBackground(b);
+            } catch (Exception e) {
+            }
+            return this;
+        }
     }
 
     class CartTableRenderer extends DefaultTableCellRenderer {
 
         @Override
-        public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
-            Component c = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);
-            setHorizontalAlignment(JLabel.CENTER);
-            try {
-                int qtyReq = Integer.parseInt(table.getValueAt(row, 2).toString());
-                int stock = Integer.parseInt(table.getValueAt(row, 5).toString());
+        public Component getTableCellRendererComponent(JTable t, Object v, boolean s, boolean f, int r, int c) {
+            if ((c == 3 || c == 4) && v instanceof Number) {
+                v = moneyFormat.format(v);
+            }
+            Component cp = super.getTableCellRendererComponent(t, v, s, f, r, c);
+            if (c == 3 || c == 4) {
+                setHorizontalAlignment(JLabel.RIGHT);
+            } else if (c == 1) {
+                setHorizontalAlignment(JLabel.LEFT);
+            } else {
+                setHorizontalAlignment(JLabel.CENTER);
+            }
 
-                if (column == 6) {
-                    setFont(new Font("Segoe UI", Font.BOLD, 13));
-                    if (qtyReq > stock) {
-                        setText("❌ Hết hàng");
-                        setForeground(new Color(220, 53, 69));
-                    } else if (stock <= 5) {
-                        setText("⚠ Sắp hết");
-                        setForeground(new Color(211, 158, 0));
+            try {
+                int q = Integer.parseInt(t.getValueAt(r, 2).toString());
+                int st = Integer.parseInt(t.getValueAt(r, 5).toString());
+                if (c == 6) {
+                    setFont(new Font("Segoe UI", Font.BOLD, 12));
+                    if (q > st) {
+                        setText("🔴 Vượt tồn");
+                        setForeground(DANGER_RED);
+                    } else if (st <= 5) {
+                        setText("🟡 Sắp hết");
+                        setForeground(WARNING_YELLOW);
                     } else {
-                        setText("✔ Hợp lệ");
-                        setForeground(new Color(40, 167, 69));
+                        setText("🟢 Hợp lệ");
+                        setForeground(SUCCESS_GREEN);
                     }
                 } else {
-                    setForeground(Color.BLACK);
+                    setForeground(TEXT_DARK);
                     setFont(new Font("Segoe UI", Font.PLAIN, 14));
                 }
 
-                if (!isSelected) {
-                    if (qtyReq > stock) {
-                        setBackground(new Color(248, 215, 218));
-                    } else if (stock <= 5) {
-                        setBackground(new Color(255, 243, 205));
+                if (!s) {
+                    if (q > st) {
+                        setBackground(new Color(253, 237, 236));
+                    } else if (st <= 5) {
+                        setBackground(new Color(254, 249, 231));
                     } else {
                         setBackground(Color.WHITE);
                     }
                 } else {
-                    setBackground(new Color(184, 218, 255));
+                    setBackground(new Color(212, 230, 241));
                 }
             } catch (Exception e) {
-                setBackground(Color.WHITE);
-                setForeground(Color.BLACK);
             }
-            return c;
+            return cp;
         }
     }
 }
